# python_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.toml
src/python-template/: __init__.py  __main__.py  __version__.py
src/python-template/cli/: app.py
src/python_template/: __init__.py  __main__.py  logger.py
src/python_template/commands/: __init__.py  base.py  registry.py
src/python_template/controllers/: __init__.py  base.py  build.py
src/python_template/models/: __init__.py  base.py  build_test_model.py
src/python_template/presentation/api/: __init__.py
src/python_template/presentation/cli/: app.py
src/python_template/presentation/gui/: __init__.py
src/python_template/services/: __init__.py
src/python_template/services/base/: __init__.py
src/template-app/: __init__.py  __version__.py  cli.py
