[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "python-template"
description = "Template repository for python projects"
readme.content-type = "text/markdown"
readme.file = "README.md"
dynamic = [ "version" ]
authors = [
    {name = "Cristian Ordonez", email = "cristianordonezrd@gmail.com"},
]
urls.Repository = "https://github.com/cristianordonez/python-template.git"
requires-python = ">= 3.9"
scripts.cli = "python_template.cli.app:main"
dependencies = []


[dependency-groups]
dev = [
    { include-group = "test" },
    { include-group = "docs" },
    { include-group = "fix" }
]
test = [
    "pytest",
    "pytest-cov"
]
docs = [
    "sphinx",
    "sphinx-argparse"
]
fix = [
    "pre-commit-uv"
]


[tool.hatch]
version.path = "src/python-template/__version__.py"
build.dev-mode-dirs = [
  "src",
]
build.targets.sdist.include = [ "src" ]
build.targets.wheel.packages = [ "src/python-template" ]

[tool.ruff]
line-length = 88
indent-width = 4
lint.ignore = [] # Avoid enforcing specific violations
lint.unfixable = [] # Avoid fixing specific violations
lint.fixable = ["ALL"] # Allow fix for all enabled rules (when `--fix`) is provided.
format.quote-style = "double"
format.docstring-code-format = true
format.docstring-code-line-length = "dynamic"

[tool.ty]
environment.python-version = "3.14"
src.include = [
    "src",
    "tests",
]

[tool.codespell]
count = true
quiet-level = 3

# [tool.pytest]

# [tool.coverage]
